--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <div class="po-wrapper">
 
-  <po-menu [p-menus]="menus"></po-menu>
+  <!-- menu -->
+  <po-menu-panel [p-menus]="menuItems">
+  </po-menu-panel>
 
+  <!-- page-default -->
   <router-outlet></router-outlet>
-  
+
 </div>
